--- a/style.css
+++ b/style.css
@@ -67,3 +67,17 @@
    
    
 }
+.bold{
+    padding-bottom: 5px;
+    font-size: 3vw;  
+    font-weight: 900;
+}
+.simple{
+    font-size: 2.5vw;  
+}
+.tm-slidertext{
+    position: absolute; 
+      top: 30%; 
+     left: 50%;     
+       color: #fff;
+   }
