--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-/* styel for the header starts here */
+/* style for the header starts here */
 .tm-header{
     background: blue;
     display: block;
@@ -384,12 +384,12 @@ input[type=submit]:focus{
   right: 40px;
   padding: 1%;
   background: #211f17;
-    border : 3px solid;
+  border : 3px solid;
   color: #fff;
-   opacity: 0.7;
-    border-radius: 50%;
-    font-size: 1.5vw;
-        width: 1.5%;
-        text-align: center;
+  opacity: 0.7;
+  border-radius: 50%;
+  font-size: 1.5vw;
+  width: 1.5%;
+  text-align: center;
     
 }
